Add boot class to composer extra

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "psr-4": {
             "Prontotype\\Plugins\\Data\\": "src/"
         }
+    },
+    "extra": {
+        "class": "Prontotype\\Plugins\\Data\\Plugin"
     }
 }
