Refactor to match new plugin architecture

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
         }
     },
     "extra": {
-        "provider": "Prontotype\\Plugins\\Data\\DataProvider"
+        "provider": "Prontotype\\Plugins\\Data\\DataPlugin"
     }
 }
