--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "prontotype/data-plugin",
     "type": "prontotype-plugin",
     "require": {
-        "prontotype/composer-installer": "dev-master",
+        "prontotype/composer-installer": "~0.1",
         "allmarkedup/dayglo": "~0.1"
     },
     "autoload": {
